tsdemux: Don't reset/recalculate segments with accurate seeks

When dealing with accurate seeks, we must send out a segment which
is exactly what is requested.

https://bugzilla.gnome.org/show_bug.cgi?id=763262